@@ -43,6 +43,10 @@
 
 # if defined(MSWIN32) || defined(MSWINCE)
 #   include <windows.h>
+#   ifdef GC_DLL
+#     define GC_print_stats 0   /* Not exported from DLL */
+				/* Redefine to 1 to generate output. */
+#   endif
 # endif
 
 # ifdef PCR
